--- a/src/app/app.module.css
+++ b/src/app/app.module.css
@@ -1,4 +1,4 @@
-.section-center {
+.sectionCenter {
 	width: 90vw;
 	max-width: 30rem;
 	margin: 8rem auto 0;
@@ -11,51 +11,8 @@
 	transition: var(--transition);
 }
 
-.section-center:hover {
+.sectionCenter:hover {
 	box-shadow: var(--shadow-3);
 }
 
-form h4 {
-	margin-bottom: 1.5rem;
-	text-align: center;
-}
 
-.form-control {
-	display: grid;
-	grid-template-columns: 1fr 100px;
-}
-
-.form-input {
-	border-radius: var(--borderRadius) 0 0 var(--borderRadius);
-}
-
-.form-control .btn {
-	border-radius: 0 var(--borderRadius) var(--borderRadius) 0;
-}
-
-.items {
-	display: grid;
-	row-gap: 1rem;
-	margin-top: 2rem;
-}
-
-.single-item {
-	display: grid;
-	grid-template-columns: auto 1fr auto;
-	column-gap: 1rem;
-	align-items: center;
-}
-
-.single-item p {
-	letter-spacing: var(--letterSpacing);
-}
-
-.remove-btn {
-	padding: 0.15rem 0.25rem;
-	font-size: 0.75rem;
-	background: var(--black);
-}
-
-.Toastify__toast {
-	text-transform: capitalize;
-}
